<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_convertor"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="76dp"

        android:text="@string/to"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/spTo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="144dp"
        android:text="@string/from"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/spFrom"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilFrom"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox.Dense"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/amount"
        app:layout_constraintBottom_toBottomOf="@+id/spFrom"
        app:layout_constraintEnd_toStartOf="@+id/spFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spFrom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etfrom"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spTo"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/currency_codes"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTo" />

    <Spinner
        android:id="@+id/spFrom"
        android:layout_width="104dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/currency_codes"
        android:padding="15dp"

        app:layout_constraintEnd_toStartOf="@+id/spTo"
        app:layout_constraintTop_toBottomOf="@+id/tvFrom" />

    <Button
        android:id="@+id/Convert"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/convert"

        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTo" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="0 EUR = 15.0 USD"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/Convert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Convert" />


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/Convert"
        app:layout_constraintEnd_toStartOf="@+id/Convert"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>